syntax = "proto3";

package nproto.pb;

option go_package = "github.com/huangjunwen/nproto/v2/pb";

// Error represents nproto.Error in protobuf.
message Error {
  int32 code = 1;
  string message = 2;
}

// MD represents md.MD in protobuf.
message MD {
  map<string, ValueList> key_values = 1;
}

message ValueList {
  repeated bytes values = 1;
}

// RawData represents enc.RawData in protobuf.
message RawData {
	// EncoderName is the name of the encoder which data is encoded by.
  string encoder_name = 1;

	// Bytes is the encoded data raw bytes.
  bytes bytes = 2;
}

message NatsRPCRequest {
  // MetaData dict.
  MD meta_data = 1;

  // Input parameter.
  RawData input = 2;

  // Timeout optional timeout in nanoseoncds.
  uint64 timeout = 3;
}

message NatsRPCResponse {
  oneof out {
    // Output parameter when no error.
    RawData output = 1;

    // Err when nproto.Error returned.
    Error err = 2;

    // PlainErr when other plain error returned.
    string plain_err = 3;
  }
}

message RawDataWithMD {
  // MetaData dict.
  MD meta_data = 1;

  // Data.
  RawData data = 2;
}
